Name: hasktags
Version: 0.68.5
Copyright: The University Court of the University of Glasgow
License: BSD3
License-File: LICENSE
Author: The GHC Team
Maintainer:
 Marc Weber <marco-oweber@gmx.de>,
 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
homepage: http://github.com/MarcWeber/hasktags
bug-reports: http://github.com/MarcWeber/hasktags/issues
Synopsis: Produces ctags "tags" and etags "TAGS" files for Haskell programs
Description:
	Produces ctags "tags" and etags "TAGS" files for Haskell programs.
Category: Development
build-type: Simple
cabal-version: >=1.10
extra-source-files:
  README,
  TODO,
  testcases/HUnitBase.lhs
  testcases/Repair.lhs
  testcases/blockcomment.hs
  testcases/constructor.hs
  testcases/firstconstructor.hs
  testcases/module.hs
  testcases/space.hs
  testcases/substring.hs
  testcases/tabs.hs
  testcases/testcase1.hs
  testcases/testcase2.hs
  testcases/testcase3.lhs
  testcases/testcase4.hs
  testcases/testcase8.hs
  testcases/twoblockcommentshs.hs
  testcases/twoblockcommentslhs.lhs
  testcases/twoblockcommentstogether.hs
  testcases/typesig.hs
  testcases/expected_failures_testing_suite.hs
  testcases/testcase9.hs
  testcases/testcase10.hs
  testcases/testcase11.hs
  testcases/simple.hs

Flag debug
  Default: False
  Description: When set to true tokens will be print at various places. This helps understanding why hasktags does not behave the w ay it should

source-repository head
  type: git
  location: http://github.com/MarcWeber/hasktags

Executable hasktags
    Main-Is: Main.hs
    Build-Depends:
      base >= 4 && < 5,
      bytestring >= 0.9 && < 0.11,
      directory >= 1.1 && < 1.3,
      filepath,
      json >= 0.5 && < 0.8
    other-modules: Tags, Hasktags, DebugShow
    hs-source-dirs: src
    ghc-options: -Wall
    default-language: Haskell2010

  if !os(windows)
    build-depends: unix

  if flag(debug)
    cpp-options: -Ddebug

Test-Suite test
  Type: exitcode-stdio-1.0
  Main-Is: Test.hs
  hs-source-dirs: src, tests
  Build-Depends: base, bytestring, directory, filepath, json,
    HUnit >= 1.2 && < 1.3
  ghc-options: -Wall
  default-language: Haskell2010

  if flag(debug)
    cpp-options: -Ddebug
