Name: hasktags
Version: 0.69.1
Copyright: The University Court of the University of Glasgow
License: BSD3
License-File: LICENSE
Author: The GHC Team
Maintainer:
 Marc Weber <marco-oweber@gmx.de>,
 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
homepage: http://github.com/MarcWeber/hasktags
bug-reports: http://github.com/MarcWeber/hasktags/issues
Synopsis: Produces ctags "tags" and etags "TAGS" files for Haskell programs
Description:
  Produces ctags "tags" and etags "TAGS" files for Haskell programs.
Category: Development
build-type: Simple
cabal-version: >=1.10
extra-source-files:
  README,
  TODO,
  testcases/HUnitBase.lhs
  testcases/Repair.lhs
  testcases/blockcomment.hs
  testcases/constructor.hs
  testcases/firstconstructor.hs
  testcases/module.hs
  testcases/space.hs
  testcases/substring.hs
  testcases/tabs.hs
  testcases/testcase1.hs
  testcases/testcase2.hs
  testcases/testcase3.lhs
  testcases/testcase4.hs
  testcases/testcase8.hs
  testcases/twoblockcommentshs.hs
  testcases/twoblockcommentslhs.lhs
  testcases/twoblockcommentstogether.hs
  testcases/typesig.hs
  testcases/expected_failures_testing_suite.hs
  testcases/testcase9.hs
  testcases/testcase10.hs
  testcases/testcase11.hs
  testcases/simple.hs
  testcases/monad-base-control.hs

Flag debug
  Default: False
  Description: When set to true tokens will be print at various places. This helps understanding why hasktags does not behave the way it should

source-repository head
  type: git
  location: http://github.com/MarcWeber/hasktags

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
  exposed-modules:   Hasktags
  other-modules:     Tags, DebugShow
  build-depends:
    utf8-string,
    base >= 4 && < 5,
    bytestring >= 0.9 && < 0.11,
    directory >= 1.1 && < 1.3,
    filepath,
    json >= 0.5 && < 0.10

  if !os(windows)
    build-depends: unix

Executable hasktags
    Main-Is: src/Main.hs
    Build-Depends:
      base,
      directory,
      filepath,
      hasktags
    ghc-options: -Wall
    default-language: Haskell2010

  if !os(windows)
    build-depends: unix

  if flag(debug)
    cpp-options: -Ddebug

Executable test
    Main-Is: Test.hs
    Build-Depends:
      utf8-string,
      base,
      bytestring,
      directory,
      filepath,
      json,
      HUnit
    other-modules: Tags, Hasktags, DebugShow
    hs-source-dirs: src, tests
    ghc-options: -Wall
    default-language: Haskell2010

  if !os(windows)
    build-depends: unix

  if flag(debug)
    cpp-options: -Ddebug

Test-Suite testsuite
  Type: exitcode-stdio-1.0
  Main-Is: Test.hs
  hs-source-dirs: src, tests
  Build-Depends:
                utf8-string,
                base,
                bytestring,
                directory,
                filepath,
                json,
                HUnit,
                unix
  other-modules: Tags, Hasktags, DebugShow
  ghc-options: -Wall
  default-language: Haskell2010

  if flag(debug)
    cpp-options: -Ddebug
