cabal-version: >=1.10
Name: hasktags
Version: 0.73.0
x-revision: 2
Copyright: The University Court of the University of Glasgow
License: BSD3
License-File: LICENSE
Author: The GHC Team
Maintainer:
 Jack Henahan <jhenahan@me.com>,
 Marc Weber <marco-oweber@gmx.de>,
 Marco Túlio Pimenta Gontijo <marcotmarcot@gmail.com>
homepage: http://github.com/MarcWeber/hasktags
bug-reports: http://github.com/MarcWeber/hasktags/issues
Synopsis: Produces ctags "tags" and etags "TAGS" files for Haskell programs
Description:
  Produces ctags "tags" and etags "TAGS" files for Haskell programs.
Category: Development
build-type: Simple

tested-with:
  GHC == 9.8.1
  GHC == 9.6.3
  GHC == 9.4.7
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3

extra-source-files:
  README.md
  TODO
  testcases/HUnitBase.lhs
  testcases/Repair.lhs
  testcases/blockcomment.hs
  testcases/constructor.hs
  testcases/module.hs
  testcases/space.hs
  testcases/substring.hs
  testcases/tabs.hs
  testcases/testcase1.hs
  testcases/testcase2.hs
  testcases/testcase3.lhs
  testcases/testcase4.hs
  testcases/testcase8.hs
  testcases/twoblockcommentshs.hs
  testcases/twoblockcommentslhs.lhs
  testcases/twoblockcommentstogether.hs
  testcases/typesig.hs
  testcases/expected_failures_testing_suite.hs
  testcases/testcase9.hs
  testcases/testcase10.hs
  testcases/testcase11.hs
  testcases/simple.hs
  testcases/monad-base-control.hs
  testcases/16-regression.hs
  testcases/9.hs
  testcases/9-too.hs

Flag debug
  Default: False
  Description: When set to true tokens will be print at various places. This helps understanding why hasktags does not behave the way it should

source-repository head
  type: git
  location: http://github.com/MarcWeber/hasktags

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Hasktags
  other-modules:     Tags, DebugShow
  build-depends:
      base               >= 4.8     && < 5
    , bytestring         >= 0.9     && < 0.13
    , directory          >= 1.2.6   && < 1.4
    , filepath
    , json               >= 0.5     && < 0.12
    , microlens-platform >= 0.3.8.0 && < 0.5
    , utf8-string

  ghc-options:
    -Wall
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  -- 2021-11-20 Andreas Abel
  -- GHC 9.2.1 has a new warning about pattern-lambdas and pattern-lets
  -- that is distracting.
  if impl(ghc == 9.2.1)
    ghc-options:
      -Wno-incomplete-uni-patterns

Executable hasktags
  Main-Is: src/Main.hs
  default-language: Haskell2010
  Build-Depends:
      hasktags
    , base
    , containers
    , directory
    , filepath
    , optparse-applicative
  other-modules: Paths_hasktags

  ghc-options:
    -Wall
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

  if flag(debug)
    cpp-options: -Ddebug

Test-Suite testsuite
  Type: exitcode-stdio-1.0
  Main-Is: Test.hs
  hs-source-dirs: src, tests
  default-language: Haskell2010
  Build-Depends:
      base
    , bytestring
    , directory
    , filepath
    , json
    , microlens-platform
    , utf8-string
    , HUnit
  other-modules: Tags, Hasktags, DebugShow

  ghc-options:
    -Wall
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat

  if flag(debug)
    cpp-options: -Ddebug
